gccida/g2/get_varargs_alias_set
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_varargs_alias_set/src/alias.c:1174:10: error: use of undeclared identifier 'set_3'; did you mean 'set_of'?
result = set_3; 
         ^~~~~
         set_of
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_varargs_alias_set/src/rtl.h:1478:12: note: 'set_of' declared here
extern rtx set_of                       PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_varargs_alias_set/src/alias.c:1175:6: error: use of undeclared identifier 'set_3'; did you mean 'set_of'?
if ( set_3 == -1 ) 
     ^~~~~
     set_of
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_varargs_alias_set/src/rtl.h:1478:12: note: 'set_of' declared here
extern rtx set_of                       PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_varargs_alias_set/src/alias.c:1179:12: error: use of undeclared identifier 'last_alias_set_5'
result = ++last_alias_set_5; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_varargs_alias_set/src/alias.c:1180:1: error: use of undeclared identifier 'set_3'
set_3 = result; 
^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_varargs_alias_set/src/obj/alias.o] Error 1
